--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <head>
+    <head class="header">
         <nav>
             <h3 class="nav-title">Rok<span class="text-primary">s</span>a<Span  class="text-primary">n</Span>a</h3>
             <ul>
@@ -19,6 +19,16 @@
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
+            <div class="banner">
+                <div class="banner-content">
+                    <h3 class="banner-gretting">Hi, I  am</h3>
+                    <h1 class="banner-title">Roksana Akter</h1>
+                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                    <button class="btn-primary">Dawnload CV</button>
+                    <button class="btn-primary">Contact</button>
+                </div>
+                <img class="profile" src="images/Roksana.png" >
+            </div>
     </head>
     <main>
 
