--- a/index.html
+++ b/index.html
@@ -10,28 +10,31 @@
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
 </head>
 <body>
-    <head class="header">
+    <header id="header" >
         <nav>
-            <h3 class="nav-title">Rok<span class="text-primary">s</span>a<Span  class="text-primary">n</Span>a</h3>
+            <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
-                <li><a href="">Portfolio</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="" style="font-size: 20px;">Portfolio</a></li>
+                <li><a href="" style="font-size: 20px;">Blog</a></li>
                 <li><button class="btn-primary">Hire me</button></li>
             </ul>
         </nav>
             <div class="banner">
                 <div class="banner-content">
                     <h3 class="banner-gretting">Hi, I  am</h3>
-                    <h1 class="banner-title">Roksana Akter</h1>
-                    <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                    <h1 class="banner-title">Mary Hardy</h1>
+                    <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.  Morning <br>because as to society behaved moments.</p>
                     <button class="btn-primary">Dawnload CV</button>
                     <button class="btn-primary">Contact</button>
                 </div>
-                <img class="profile" src="images/Roksana.png" >
+                <img class="profile" src="images/hardy.png" >
             </div>
-    </head>
+    </header>
     <main>
-
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-description">I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.</p>
+        </section>
     </main>
     <footer>
 
