--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
             </div>
         </div>
         <div class="footer-column">
-            <h3 class="section-title">Let’s Message me</h3>
+            <h3 class="section-title">Let’s Message me right now</h3>
            
             <form class="contact">
                <input type="text" placeholder="Your name">
