google fonts added

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
 </head>
 <body>
     <header id="header" >
@@ -24,8 +27,12 @@
                     <h3 class="banner-gretting">Hi, I  am</h3>
                     <h1 class="banner-title">Mary Hardy</h1>
                     <p class="banner-description">Shot what able cold new see hold.Friendly as an betrayed formerly he.  Morning <br>because as to society behaved moments.</p>
-                    <button class="btn-primary">Dawnload CV</button>
-                    <button class="btn-primary">Contact</button>
+                    <button class="btn-primary"> <span class="material-symbols-outlined">
+                        download
+                        </span> Dawnload CV </button>
+                    <button class="btn-primary"> <span class="material-symbols-outlined">
+                        call
+                        </span> Contact</button>
                 </div>
                 <img class="profile" src="images/hardy.png" >
             </div>
@@ -135,7 +142,9 @@
                 </div>
             </div>
             <div id="dawnload-cv">
-                <button class="btn-primary">Dawnload CV</button> 
+                <button class="btn-primary"> <span class="material-symbols-outlined">
+                    download
+                    </span> Dawnload CV</button> 
             </div>
         </section>
     </main>
